packaging and make up

--- a/src/app/account-details/account-details.component.html
+++ b/src/app/account-details/account-details.component.html
@@ -9,6 +9,9 @@
     <label><b>Balance: </b></label> {{account.balance}}
   </div>
   <div>
+    <label><b>Currency: </b></label> {{account.currency}}
+  </div>
+  <div>
     <label><b>User Id: </b></label> {{account.userId}}
   </div>
   <div>
